# clipped

clipped-backend/: Cargo.toml  config.yaml
clipped-backend/crates/libs/lib-core/: Cargo.toml
clipped-backend/crates/libs/lib-core/src/: error.rs  lib.rs
clipped-backend/crates/libs/lib-core/src/model/: configuration.rs  user.rs
clipped-backend/crates/libs/lib-core/src/providers/: configuration.rs
clipped-backend/crates/libs/lib-core/src/repository/: user.rs
clipped-backend/crates/libs/lib-discord-oauth/: Cargo.toml
clipped-backend/crates/libs/lib-media/: Cargo.toml
clipped-backend/crates/libs/lib-storage/: Cargo.toml
clipped-backend/crates/services/http-api/: Cargo.toml
clipped-backend/crates/services/http-api/src/: main.rs
clipped-backend/src/api/: mod.rs
clipped-backend/src/api/controllers/: login_controller.rs
clipped-backend/src/entities/: configuration.rs  discord.rs
clipped-backend/src/services/: configuration.rs  discord.rs
clipped-cli/: Cargo.toml
clipped-cli/src/: main.rs
clipped-service/src/: main.rs
clipped-service/src/api/controllers/: mod.rs
clipped-service/src/entities/: mod.rs
clipped-webapp/: index.html  package-lock.json  package.json
clipped-webapp/src/: App.tsx  Globals.d.ts  main.tsx  utils.ts
clipped-webapp/src/api/: Api.ts
clipped-webapp/src/atomic/molecules/: AccountMenu.tsx  Notification.tsx  SidebarIcon.tsx  SpaceUsageWidget.tsx  VideoCard.tsx
clipped-webapp/src/atomic/organisms/: Sidebar.tsx  Topbar.tsx
clipped-webapp/src/layouts/: MainLayout.tsx  SidebarLayout.tsx
clipped-webapp/src/pages/AppHome/: Page.tsx
clipped-webapp/src/pages/Login/: Page.tsx
clipped-webapp/src/services/: Notifications.tsx
clipped-webapp/src/styles/: app.scss  colors.scss  fonts.css
clipped-webapp/src/styles/atomic/molecules/: Notification.module.scss  SidebarIcon.module.scss  VideoCard.module.scss
clipped-webapp/src/styles/atomic/organisms/: topbar.module.scss
clipped-webapp/src/styles/layouts/: MainLayout.module.scss
