[package]
name = "clipped-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.27"
surreal-id = "0.2.1"
surrealdb = "1.0.0"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
