[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
  # -- Application Libraries
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-discord-oauth",
  "crates/libs/lib-media",
  "crates/libs/lib-storage",

  # -- Application Services
  "crates/services/http-api",

  # -- Tools
]
