[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
surreal-id = "0.2.1"
surrealdb = "1.0.0"
thiserror = "1.0.50"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
