[package]
name = "http-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

lib-core = { path = "../../libs/lib-core/" }
async-trait = "0.1.74"
surreal-id = "0.2.1"
